--- a/strapi-backend/my-strapi-app/package.json
+++ b/strapi-backend/my-strapi-app/package.json
@@ -10,19 +10,19 @@
     "strapi": "strapi",
     "deploy": "strapi deploy",
     "dev": "next dev --turbopack"
-
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@strapi/types": "^4.25.23",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6"
+  },
   "dependencies": {
-    "@strapi/strapi": "4.25.23",
-    "@strapi/plugin-users-permissions": "4.25.23",
-    "@strapi/plugin-i18n": "4.25.23",
-    "@strapi/plugin-cloud": "4.25.23",
+    "@strapi/strapi": "^5.19.0",
     "pg": "8.8.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "5.3.4",
-    "styled-components": "5.3.3"
+    "react-router-dom": "^6.0.0",
+    "styled-components": "^6.0.0"
   },
   "author": {
     "name": "A Strapi developer"
