--- a/strapi-backend/my-strapi-app/tsconfig.json
+++ b/strapi-backend/my-strapi-app/tsconfig.json
@@ -2,7 +2,11 @@
   "extends": "@strapi/typescript-utils/tsconfigs/server",
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "."
+    "rootDir": ".",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "skipLibCheck": true
+    
   },
   "include": [
     "./",
