--- a/strapi-backend/my-strapi-app/package.json
+++ b/strapi-backend/my-strapi-app/package.json
@@ -17,11 +17,13 @@
     "postcss": "^8.5.6"
   },
   "dependencies": {
+    "@strapi/plugin-content-manager": "^4.25.23",
     "@strapi/strapi": "^5.19.0",
     "pg": "8.8.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
+    "strapi": "^3.6.11",
     "styled-components": "^6.0.0"
   },
   "author": {
